refactor : Service -> Controller DTO Query로 변경